--- a/frontend/src/pages/home/goods/goods.module.css
+++ b/frontend/src/pages/home/goods/goods.module.css
@@ -1,5 +1,5 @@
 .wrap {
-  margin-top: 24px;
+  margin-top: 32px;
   padding-bottom: calc(env(safe-area-inset-bottom, 0) + 80px); /* Место для нижнего меню */
   margin-bottom: calc(env(safe-area-inset-bottom, 0) + 20px);
 }
